--- a/VehicleMVC/Views/Maker/Index.cshtml
+++ b/VehicleMVC/Views/Maker/Index.cshtml
@@ -12,7 +12,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.MakerName)
+            @Html.ActionLink("MakerName", "Index", new { sortOrder = ViewBag.NameSort })
         </th>
         <th>
             @Html.DisplayNameFor(model => model.MakerDescription)
@@ -22,7 +22,8 @@
         </th>
     </tr>
 
-@foreach (var item in Model) {
+@foreach (var item in Model)
+{
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.MakerName)
@@ -30,14 +31,15 @@
         <td>
             @Html.DisplayFor(modelItem => item.MakerDescription)
         </td>
+        <td>
+        @foreach (var modelsInMaker in item.MakersModels)
+        {
+            <p>
+            @Html.DisplayFor(modelItem => modelsInMaker.ModelName)
 
-        @foreach (var modelsInMaker in item.MakersModels) {
-        <tr>
-            @Html.DisplayFor(modelItem => modelsInMaker)
-          
-        </tr>
+            </p>   
         }
-
+        </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.MakeID }) |
             @Html.ActionLink("Details", "Details", new { id=item.MakeID }) |
