--- a/VehicleMVC/Views/Maker/Index.cshtml
+++ b/VehicleMVC/Views/Maker/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<VehicleMVC.MakerViewModel>
+﻿@using PagedList;
+@using PagedList.Mvc;
+@model IPagedList<VehicleMVC.MakerViewModel>
 
 @{
     ViewBag.Title = "Index";
@@ -9,21 +11,35 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+@using (Html.BeginForm("Index", "Maker", FormMethod.Get))
+{
+    <p>
+        Find by name: @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
+        <input type="submit" value="Search" />
+    </p>
+}
 <table class="table">
     <tr>
         <th>
-            @Html.ActionLink("MakerName", "Index", new { sortOrder = ViewBag.NameSort })
+            @Html.ActionLink("MakerName", "Index", new { sortOrder = ViewBag.NameSort, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.MakerDescription)
+            @Html.DisplayNameFor(model => model.First().MakerDescription)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.MakersModels)
+            @Html.DisplayNameFor(model => model.First().MakersModels)
         </th>
     </tr>
-
-@foreach (var item in Model)
+@if (Model.Count == 0)
 {
+    <tr>
+        <td>No match</td>
+    </tr>
+}
+else
+{
+  foreach (var item in Model)
+  {
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.MakerName)
@@ -41,11 +57,15 @@
         }
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.MakeID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.MakeID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.MakeID })
+            @Html.ActionLink("Edit", "Edit", new { id = item.MakeID }) |
+            @Html.ActionLink("Details", "Details", new { id = item.MakeID }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.MakeID })
         </td>
     </tr>
+  }
 }
-
 </table>
+Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+
+@Html.PagedListPager(Model, page => Url.Action("Index",
+    new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
