--- a/VehicleMVC/Views/Model/Index.cshtml
+++ b/VehicleMVC/Views/Model/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<VehicleMVC.ModelViewModel>
+﻿@using PagedList;
+@using PagedList.Mvc;
+@model IPagedList<VehicleMVC.ModelViewModel>
 
 @{
     ViewBag.Title = "Index";
@@ -9,16 +11,29 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+@using (Html.BeginForm("Index", "Model", FormMethod.Get))
+{
+    <p>
+        Find by name: @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
+        <input type="submit" value="Search" />
+    </p>
+}
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.ModelName)
+            @Html.ActionLink("ModelName", "Index", new { sortOrder = ViewBag.NameSort, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ModelsMaker.MakerName)
+            @Html.DisplayNameFor(model => model.First().ModelsMaker.MakerName)
         </th>
         <th></th>
     </tr>
+    @if (Model.Count == 0)
+    {
+        <tr>
+            <td>No match</td>
+        </tr>
+    }
 
 @foreach (var item in Model) {
     <tr>
@@ -37,3 +52,7 @@
 }
 
 </table>
+Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+
+@Html.PagedListPager(Model, page => Url.Action("Index",
+    new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
