--- a/VehicleMVC/Views/Maker/Index.cshtml
+++ b/VehicleMVC/Views/Maker/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@using PagedList;
-@using PagedList.Mvc;
-@model IPagedList<VehicleMVC.MakerViewModel>
+﻿@model PagedList<VehicleMVC.MakerViewModel>
 
 @{
     ViewBag.Title = "Index";
@@ -30,15 +28,7 @@
             @Html.DisplayNameFor(model => model.First().MakersModels)
         </th>
     </tr>
-@if (Model.Count == 0)
-{
-    <tr>
-        <td>No match</td>
-    </tr>
-}
-else
-{
-  foreach (var item in Model)
+  @foreach (var item in Model)
   {
     <tr>
         <td>
@@ -63,9 +53,21 @@ else
         </td>
     </tr>
   }
-}
-</table>
-Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
 
-@Html.PagedListPager(Model, page => Url.Action("Index",
-    new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
+</table>
+<p>
+    @if (Model.HasPreviousPage)
+    {
+
+        @Html.ActionLink("<<<", "Index", new { page = (Model.PageIndex - 1) })
+
+    }
+
+    @if (Model.HasNextPage)
+    {
+
+        @Html.ActionLink(">>>", "Index", new { page = (Model.PageIndex + 1) })
+
+    }
+
+</p>
